--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "restful",
   "version": "1.0.0",
   "description": "tuto restful node",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
+    "start" : "nodemon zob.js --exec babel-node --presets es2015,stage-2" ,
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zolano",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bcrypt": "^1.0.2",
     "hapi": "^16.5.2",
     "hapi-auth-jwt": "^4.0.0",
     "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.2",
     "knex": "^0.13.0",
-    "mysql": "^2.14.1"
+    "mysql": "^2.14.1",
+    "nodemon": "^1.11.0"
   }
 }
