--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tuto restful node",
   "main": "server.js",
   "scripts": {
-    "start" : "nodemon server.js --exec babel-node --presets es2015,stage-2" ,
+    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zolano",
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bcrypt": "^1.0.2",
+    "formidable": "^1.1.1",
     "hapi": "^16.5.2",
     "hapi-auth-jwt": "^4.0.0",
     "joi": "^10.6.0",
