--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bcrypt": "^1.0.2",
+    "date-and-time": "^0.5.0",
     "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
     "hapi": "^16.5.2",
     "hapi-auth-jwt": "^4.0.0",
     "joi": "^10.6.0",
